--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <p>hello, world</p>
 <a href="italian_renaissance_zimarra.glb">italian_renaissance_zimarra.glb</a>
+<a href="Parrot.glb">Parrot.glb</a>
